# nodewipe

./: .dockerignore  .gitignore  .nodewipeignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  tui.rs
core/: Cargo.toml
core/src/: config.rs  deleter.rs  ignorefile.rs  lib.rs  model.rs  scanner.rs  workspace.rs
docker/: Dockerfile
gui/: index.html  package-lock.json  package.json
gui/src/: main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
gui/web/: index.html
gui/web/src/: main.js  styles.css
npm-package/: README.md  package.json
npm-package/scripts/: download-binary.js
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  README.md
scripts/: install.sh
