[package]
name = "npkill-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "npkill-rs"
path = "src/main.rs"

[dependencies]
npkill-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
