[package]
name = "nodewipe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nodewipe"
path = "src/main.rs"

[dependencies]
nodewipe-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
walkdir.workspace = true
