[package]
name = "npkill-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
npkill-core = { path = "../../core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }

[lib]
name = "npkill_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
