[package]
name = "nodewipe-gui"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nodewipe-core = { path = "../../core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }

[lib]
name = "nodewipe_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
