[package]
name = "nodewipe-gui"
version = "0.5.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nodewipe-core = { path = "../../core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
walkdir.workspace = true

[lib]
name = "nodewipe_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
